force-app/main/default/objects/UserDreamId__c/UserDreamId__c.object-meta.xml
<CustomObject>
    <label>User Dream Id</label>
    <nameField>
        <label>User Dream Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Dream Ids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>