force-app/main/default/objects/UserDreamId__c/fields/CA_DREAM_ID__c.field-meta.xml
<CustomField>
    <fullName>CA_DREAM_ID__c</fullName>
    <externalId>true</externalId>
    <label>CA DREAM ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>