force-app/main/default/objects/UserDreamId__c/fields/CA_Name__c.field-meta.xml
<CustomField>
    <fullName>CA_Name__c</fullName>
    <label>CA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>