force-app/main/default/objects/UserDreamId__c/fields/CA_Retail_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>CA_Retail_Store_Name__c</fullName>
    <label>CA Retail Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>