force-app/main/default/objects/UserDreamId__c/fields/CA_RMS_ID__c.field-meta.xml
<CustomField>
    <fullName>CA_RMS_ID__c</fullName>
    <label>CA RMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>